--- a/index.html
+++ b/index.html
@@ -435,6 +435,14 @@
         <td class="image"><a href="naslovna/moliski.jpg" target="_blank"><img src="naslovna/moliski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/moliski.jpg" target="_blank"><img src="prva/moliski.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Navatl ili Astečki jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Nahuatl" target="_blank">Nahuatl language</a></td>
+        <td>In Piltlajtoanpili</td>
+        <td class="image"><a href="naslovna/astecki.jpg" target="_blank"><img src="naslovna/astecki.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/astecki.jpg" target="_blank"><img src="prva/astecki.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Nemački jezik</td>
