--- a/index.html
+++ b/index.html
@@ -269,6 +269,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Haustek jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Huastec_language" target="_blank">Haustec language</a></td>
+        <td>An Chikam Principe</td>
+        <td class="image"><a href="naslovna/haustek.jpg" target="_blank"><img src="naslovna/haustek.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/haustek.jpg" target="_blank"><img src="prva/haustek.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Hebrejski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Hebrew_language" target="_blank">Hebrew language</a></td>
         <td class="rtl">הנסיך הקטן</td>
