--- a/index.html
+++ b/index.html
@@ -637,6 +637,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Turski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Turkish_language" target="_blank">Turkish language</a></td>
+        <td>Küçük prens</td>
+        <td class="image"><a href="naslovna/turski-2.jpg" target="_blank"><img src="naslovna/turski-2.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/turski-2.jpg" target="_blank"><img src="prva/turski-2.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Uzbečki jezik ćirilica</td>
         <td><a href="https://en.wikipedia.org/wiki/Uzbek_language" target="_blank">Uzbek language</a></td>
         <td>Кичкина Шаҳзода</td>
