Fixed table header

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         <th>Language</th>
         <th>Title</th>
         <th class="image">&nbsp;</th>
+        <th class="image">&nbsp;</th>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
