--- a/index.html
+++ b/index.html
@@ -188,6 +188,14 @@
         <td class="image"><a href="naslovna/ceski.jpg" target="_blank"><img src="naslovna/ceski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/ceski.jpg" target="_blank"><img src="prva/ceski.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Češki jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Czech_language" target="_blank">Czech language</a></td>
+        <td>Malý princ</td>
+        <td class="image"><a href="naslovna/ceski-2.jpg" target="_blank"><img src="naslovna/ceski-2.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/ceski-2.jpg" target="_blank"><img src="prva/ceski-2.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Engleski jezik</td>
