--- a/index.html
+++ b/index.html
@@ -310,6 +310,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Hrvatski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Croatian_language" target="_blank">Croatian language</a></td>
+        <td>Mali princ</td>
+        <td class="image"><a href="naslovna/hrvatski.jpg" target="_blank"><img src="naslovna/hrvatski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/hrvatski.jpg" target="_blank"><img src="prva/hrvatski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Hrvatski kajkavski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Kajkavian" target="_blank">Kajkavian</a></td>
         <td>Mali Kralevič</td>
