--- a/index.html
+++ b/index.html
@@ -566,6 +566,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Svahili jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Swahili_language" target="_blank">Swahili language</a></td>
+        <td>Mwana Mdaga wa Mfalme</td>
+        <td class="image"><a href="naslovna/svahili.jpg" target="_blank"><img src="naslovna/svahili.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/svahili.jpg" target="_blank"><img src="prva/svahili.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Španski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Spanish_language" target="_blank">Spanish language</a></td>
         <td>El Principito</td>
