--- a/index.html
+++ b/index.html
@@ -510,6 +510,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Radžastani jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Rajasthani_language" target="_blank">Rajasthani language</a></td>
+        <td>नैनो राजकंवर</td>
+        <td class="image"><a href="naslovna/radzastani.jpg" target="_blank"><img src="naslovna/radzastani.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/radzastani.jpg" target="_blank"><img src="prva/radzastani.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Romski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Romani_language" target="_blank">Romani language</a></td>
         <td>O cino krajoro</td>
