--- a/index.html
+++ b/index.html
@@ -454,6 +454,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Malteški jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Maltese_language" target="_blank">Maltese language</a></td>
+        <td>Iċ-Ċkejken Prinċep</td>
+        <td class="image"><a href="naslovna/malteski.jpg" target="_blank"><img src="naslovna/malteski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/malteski.jpg" target="_blank"><img src="prva/malteski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Moliški dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Slavomolisano_dialect" target="_blank">Molise dialect</a></td>
         <td>Ru Prengeparielle</td>
