--- a/index.html
+++ b/index.html
@@ -644,6 +644,14 @@
         <td class="image"><a href="naslovna/toba.jpg" target="_blank"><img src="naslovna/toba.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/toba.jpg" target="_blank"><img src="prva/toba.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Tonganski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Tongan_language" target="_blank">Tongan language</a></td>
+        <td>Ko e Ki'i  Pilinisi'</td>
+        <td class="image"><a href="naslovna/tongan.jpg" target="_blank"><img src="naslovna/tongan.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/tongan.jpg" target="_blank"><img src="prva/tongan.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Totonački jezik</td>
