--- a/index.html
+++ b/index.html
@@ -110,6 +110,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Albanski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Albanian_language" target="_blank">Albanian language</a></td>
+        <td>Princi i Vogël</td>
+        <td class="image"><a href="naslovna/albanski.jpg" target="_blank"><img src="naslovna/albanski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/albanski.jpg" target="_blank"><img src="prva/albanski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Arapski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Arabic" target="_blank">Arabic language</a></td>
         <td class="rtl">شازده کوچولو</td>
