--- a/index.html
+++ b/index.html
@@ -206,6 +206,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Danski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Danish_language"_blank">Danish language</a></td>
+        <td>Den lille prins</td>
+        <td class="image"><a href="naslovna/danski.jpg" target="_blank"><img src="naslovna/danski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/danski.jpg" target="_blank"><img src="prva/danski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Engleski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/English_language" target="_blank">English language</a></td>
         <td>The Little prince</td>
