--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Danski jezik</td>
-        <td><a href="https://en.wikipedia.org/wiki/Danish_language"_blank">Danish language</a></td>
+        <td><a href="https://en.wikipedia.org/wiki/Danish_language" target="_blank">Danish language</a></td>
         <td>Den lille prins</td>
         <td class="image"><a href="naslovna/danski.jpg" target="_blank"><img src="naslovna/danski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/danski.jpg" target="_blank"><img src="prva/danski.jpg" width="50px"></a></td>
