--- a/index.html
+++ b/index.html
@@ -126,6 +126,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Banatsko bugarski dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Banat_Bulgarian_dialect" target="_blank">Banat Bulgarian dialect</a></td>
+        <td>Manenija Princ</td>
+        <td class="image"><a href="naslovna/banatsko-bugarski.jpg" target="_blank"><img src="naslovna/banatsko-bugarski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/banatsko-bugarski.jpg" target="_blank"><img src="prva/banatsko-bugarski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Baškirski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Bashkir_language" target="_blank">Bashkir language</a></td>
         <td>Бәләкәй шаһзат</td>
