--- a/index.html
+++ b/index.html
@@ -550,6 +550,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Rimski dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Romanesco_dialect" target="_blank">Romanesco dialect</a></td>
+        <td>Er Principetto</td>
+        <td class="image"><a href="naslovna/romanesco.jpg" target="_blank"><img src="naslovna/romanesco.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/romanesco.jpg" target="_blank"><img src="prva/romanesco.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Romski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Romani_language" target="_blank">Romani language</a></td>
         <td>O cino krajoro</td>
