--- a/index.html
+++ b/index.html
@@ -118,6 +118,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Alhamijado jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Aljamiado" target="_blank">Aljamiado language</a></td>
+        <td class="rtl">ْ</td>
+        <td class="image"><a href="naslovna/alhamijado.jpg" target="_blank"><img src="naslovna/alhamijado.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/alhamijado.jpg" target="_blank"><img src="prva/alhamijado.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Arapski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Arabic" target="_blank">Arabic language</a></td>
         <td class="rtl">شازده کوچولو</td>
