--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <td class="number"><span class="auto"></span></td>
         <td>Alhamijado jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Aljamiado" target="_blank">Aljamiado language</a></td>
-        <td class="rtl">ْ</td>
+        <td class="rtl"></td>
         <td class="image"><a href="naslovna/alhamijado.jpg" target="_blank"><img src="naslovna/alhamijado.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/alhamijado.jpg" target="_blank"><img src="prva/alhamijado.jpg" width="50px"></a></td>
       </tr>
@@ -227,6 +227,14 @@
         <td>Den lille prins</td>
         <td class="image"><a href="naslovna/danski.jpg" target="_blank"><img src="naslovna/danski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/danski.jpg" target="_blank"><img src="prva/danski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Dari jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Dari_language" target="_blank">Dari language</a></td>
+        <td class="rtl"></td>
+        <td class="image"><a href="naslovna/dari.jpg" target="_blank"><img src="naslovna/dari.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/dari.jpg" target="_blank"><img src="prva/dari.jpg" width="50px"></a></td>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
