--- a/index.html
+++ b/index.html
@@ -310,6 +310,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Gruzinski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Georgian_language" target="_blank">Georgian language</a></td>
+        <td>პატარა პრინცი</td>
+        <td class="image"><a href="naslovna/gruzinski.jpg" target="_blank"><img src="naslovna/gruzinski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/gruzinski.jpg" target="_blank"><img src="prva/gruzinski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Gvarani jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Guarani_language" target="_blank">Guarani language</a></td>
         <td>Principe'i</td>
