--- a/index.html
+++ b/index.html
@@ -404,6 +404,14 @@
         <td class="image"><a href="naslovna/kabardinski.jpg" target="_blank"><img src="naslovna/kabardinski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/kabardinski.jpg" target="_blank"><img src="prva/kabardinski.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Karenski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Karenic_languages" target="_blank">Karenic languages</a></td>
+        <td></td>
+        <td class="image"><a href="naslovna/karenski.jpg" target="_blank"><img src="naslovna/karenski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/karenski.jpg" target="_blank"><img src="prva/karenski.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Kazaški jezik</td>
