--- a/index.html
+++ b/index.html
@@ -628,6 +628,14 @@
         <td class="image"><a href="naslovna/sanskrit.jpg" target="_blank"><img src="naslovna/sanskrit.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/sanskrit.jpg" target="_blank"><img src="prva/sanskrit.jpg" width="50px"></a></td>
       </tr>
+           <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Kolokviajalni singapurski engleski</td>
+        <td><a href="https://en.wikipedia.org/wiki/Singlish" target="_blank">Singlish</a></td>
+        <td>The Leeter Tunku</td>
+        <td class="image"><a href="naslovna/singlis.jpg" target="_blank"><img src="naslovna/singlis.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/singlis.jpg" target="_blank"><img src="prva/singlis.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Slovački jezik</td>
@@ -648,7 +656,7 @@
         <td class="number"><span class="auto"></span></td>
         <td>Staroegipatski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Egyptian_language#Old_Egyptian" target="_blank">Egyptian language</a></td>
-        <td>[][][][][][]</td>
+        <td>Nesu-sa-nejes</td>
         <td class="image"><a href="naslovna/staroegipatski.jpg" target="_blank"><img src="naslovna/staroegipatski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/staroegipatski.jpg" target="_blank"><img src="prva/staroegipatski.jpg" width="50px"></a></td>
       </tr>
