--- a/index.html
+++ b/index.html
@@ -262,6 +262,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Finski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Finnish_language" target="_blank">Finnish language</a></td>
+        <td>Pikku Prinssi</td>
+        <td class="image"><a href="naslovna/finski.jpg" target="_blank"><img src="naslovna/finski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/finski.jpg" target="_blank"><img src="prva/finski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Francuski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/French_language" target="_blank">French language</a></td>
         <td>Le Petit prince</td>
