--- a/index.html
+++ b/index.html
@@ -580,6 +580,14 @@
         <td class="image"><a href="naslovna/poljski.jpg" target="_blank"><img src="naslovna/poljski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/poljski.jpg" target="_blank"><img src="prva/poljski.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Portugalski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Portuguese_language" target="_blank">Portuguese language</a></td>
+        <td>O Principezinho</td>
+        <td class="image"><a href="naslovna/portugalski.jpg" target="_blank"><img src="naslovna/portugalski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/portugalski.jpg" target="_blank"><img src="prva/portugalski.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Prekomurski jezik</td>
