--- a/index.html
+++ b/index.html
@@ -462,6 +462,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Korejski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Korean_language" target="_blank">Korean language</a></td>
+        <td>어린 왕자</td>
+        <td class="image"><a href="naslovna/korejski.jpg" target="_blank"><img src="naslovna/korejski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/korejski.jpg" target="_blank"><img src="prva/korejski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Kurdski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Kurdish_languages" target="_blank">Kurdish language</a></td>
         <td>Mirzaye Piçük</td>
