--- a/index.html
+++ b/index.html
@@ -270,6 +270,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Forro ili saotomanski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Forro_Creole" target="_blank">Forro Creole language</a></td>
+        <td>Piquina Plinchipi</td>
+        <td class="image"><a href="naslovna/forro.jpg" target="_blank"><img src="naslovna/forro.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/forro.jpg" target="_blank"><img src="prva/forro.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Francuski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/French_language" target="_blank">French language</a></td>
         <td>Le Petit prince</td>
