--- a/index.html
+++ b/index.html
@@ -820,6 +820,14 @@
         <td class="image"><a href="naslovna/uzbecki-latinica.jpg" target="_blank"><img src="naslovna/uzbecki-latinica.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/uzbecki-latinica.jpg" target="_blank"><img src="prva/uzbecki-latinica.jpg" width="50px"></a></td>
       </tr>
+          <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Verona dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Veneto#Language" target="_blank">Veronese Dialect</a></td>
+        <td>El Principe Butin</td>
+        <td class="image"><a href="naslovna/verona.jpg" target="_blank"><img src="naslovna/verona.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/verona.jpg" target="_blank"><img src="prva/verona.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Vijetnamski jezik</td>
