--- a/index.html
+++ b/index.html
@@ -446,6 +446,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Kečua jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Quechuan_languages" target="_blank">Quechuan language</a></td>
+        <td>Quyllur Llaqtayuq Wawawanta</td>
+        <td class="image"><a href="naslovna/kecua.jpg" target="_blank"><img src="naslovna/kecua.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/kecua.jpg" target="_blank"><img src="prva/kecua.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Kineski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Chinese_language" target="_blank">Chinese language</a></td>
         <td>小王子</td>
