--- a/index.html
+++ b/index.html
@@ -660,6 +660,14 @@
         <td class="image"><a href="naslovna/ruski.jpg" target="_blank"><img src="naslovna/ruski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/ruski.jpg" target="_blank"><img src="prva/ruski.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Sango jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Sango_language" target="_blank">Sango language</a></td>
+        <td>Kété Gbia</td>
+        <td class="image"><a href="naslovna/sango.jpg" target="_blank"><img src="naslovna/sango.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/sango.jpg" target="_blank"><img src="prva/sango.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Sanskrit</td>
