--- a/index.html
+++ b/index.html
@@ -726,6 +726,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Španski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Spanish_language" target="_blank">Spanish language</a></td>
+        <td>El Principito</td>
+        <td class="image"><a href="naslovna/spanskimini.jpg" target="_blank"><img src="naslovna/spanskimini.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/spanskimini.jpg" target="_blank"><img src="prva/spanskimini.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Švedski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Swedish_language" target="_blank">Swedish language</a></td>
         <td>Lille prinsen</td>
