--- a/index.html
+++ b/index.html
@@ -110,6 +110,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Srpski jezik na Brajevom pismu</td>
+        <td><a href="https://en.wikipedia.org/wiki/Braille" target="_blank">Serbian language on Braille</a></td>
+        <td></td>
+        <td class="image"><a href="naslovna/brajevo.jpg" target="_blank"><img src="naslovna/brajevo.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/brajevo.jpg" target="_blank"><img src="prva/brajevo.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Albanski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Albanian_language" target="_blank">Albanian language</a></td>
         <td>Princi i Vogël</td>
