--- a/index.html
+++ b/index.html
@@ -606,6 +606,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Persijski Farsi jezik</td>
+        <td><a href="https://https://en.wikipedia.org/wiki/Persian_language" target="_blank">Persian language</a></td>
+        <td class="rtl">شازده کوچولو</td>
+        <td class="image"><a href="naslovna/farsi.jpg" target="_blank"><img src="naslovna/farsi.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/farsi.jpg" target="_blank"><img src="prva/farsi.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Poljski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Polish_language" target="_blank">Polish language</a></td>
         <td>Mały Książę</td>
