--- a/index.html
+++ b/index.html
@@ -572,6 +572,14 @@
         <td class="image"><a href="naslovna/moliski.jpg" target="_blank"><img src="naslovna/moliski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/moliski.jpg" target="_blank"><img src="prva/moliski.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Napolitanski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Neapolitan_language" target="_blank">Neapolitan language</a></td>
+        <td>'O Princepe Piccerillo</td>
+        <td class="image"><a href="naslovna/napolitanski.jpg" target="_blank"><img src="naslovna/napolitanski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/napolitanski.jpg" target="_blank"><img src="prva/napolitanski.jpg" width="50px"></a></td>
+      </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Navatl ili Astečki jezik</td>
