--- a/index.html
+++ b/index.html
@@ -188,6 +188,14 @@
         <td class="image"><a href="naslovna/bugarski-2.jpg" target="_blank"><img src="naslovna/bugarski-2.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/bugarski-2.jpg" target="_blank"><img src="prva/bugarski-2.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Burjatski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Buryat_language" target="_blank"Buryat language</a></td>
+        <td>Бишыхан Хан Тайжа##</td>
+        <td class="image"><a href="naslovna/burjatski.jpg" target="_blank"><img src="naslovna/burjatski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/burjatski.jpg" target="_blank"><img src="prva/burjatski.jpg" width="50px"></a></td>
+      </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Burmanski jezik</td>
