--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Burjatski jezik</td>
-        <td><a href="https://en.wikipedia.org/wiki/Buryat_language" target="_blank"Buryat language</a></td>
+        <td><a href="https://en.wikipedia.org/wiki/Buryat_language" target="_blank">Buryat language</a></td>
         <td>Бишыхан Хан Тайжа##</td>
         <td class="image"><a href="naslovna/burjatski.jpg" target="_blank"><img src="naslovna/burjatski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/burjatski.jpg" target="_blank"><img src="prva/burjatski.jpg" width="50px"></a></td>
