--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Lana jezik</td>
-        <td><a href=https://en.wikipedia.org/wiki/Northern_Thai_language" target="_blank">Northern Thai language</a></td>
+        <td><a href="https://en.wikipedia.org/wiki/Northern_Thai_language" target="_blank">Northern Thai language</a></td>
         <td>[][][]</td>
         <td class="image"><a href="naslovna/lana.jpg" target="_blank"><img src="naslovna/lana.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/lana.jpg" target="_blank"><img src="prva/lana.jpg" width="50px"></a></td>
