--- a/index.html
+++ b/index.html
@@ -406,6 +406,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Irski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Irish_language" target="_blank">Irish language</a></td>
+        <td>An prionsa Beag</td>
+        <td class="image"><a href="naslovna/irski.jpg" target="_blank"><img src="naslovna/irski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/irski.jpg" target="_blank"><img src="prva/irski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Italijanski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Italian_language" target="_blank">Italian language</a></td>
         <td>Il Piccolo Principe</td>
