--- a/index.html
+++ b/index.html
@@ -334,6 +334,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Kiparski grčki jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Cypriot_Greek" target="_blank">Cypriot Greek</a></td>
+        <td>Ο μικρός πρίγκιπας</td>
+        <td class="image"><a href="naslovna/kiparski.jpg" target="_blank"><img src="naslovna/kiparski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/kiparski.jpg" target="_blank"><img src="prva/kiparski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Starogrčki jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Ancient_Greek" target="_blank">Ancient Greek language</a></td>
         <td>Τὸ βασιλείδιον</td>
