--- a/index.html
+++ b/index.html
@@ -302,6 +302,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Francuski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/French_language" target="_blank">French language</a></td>
+        <td>Le Petit prince</td>
+        <td class="image"><a href="naslovna/francuskimini.jpg" target="_blank"><img src="naslovna/francuskimini.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/francuskimini.jpg" target="_blank"><img src="prva/francuskimini.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Starofrancuski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Old_French" target="_blank">Old French language</a></td>
         <td>Li Juenes Princes</td>
