--- a/index.html
+++ b/index.html
@@ -588,6 +588,14 @@
         <td class="image"><a href="naslovna/makedonski.jpg" target="_blank"><img src="naslovna/makedonski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/makedonski.jpg" target="_blank"><img src="prva/makedonski.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Malajski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Malay_language" target="_blank">Malay language</a></td>
+        <td>Putera Cilik </td>
+        <td class="image"><a href="naslovna/malajski.jpg" target="_blank"><img src="naslovna/malajski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/malajski.jpg" target="_blank"><img src="prva/malajski.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Malteški jezik</td>
