--- a/index.html
+++ b/index.html
@@ -646,6 +646,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Oksitanski Aranski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Aranese_dialect" target="_blank">Occitan Aranese language</a></td>
+        <td>Eth petit prince</td>
+        <td class="image"><a href="naslovna/aranski.jpg" target="_blank"><img src="naslovna/aranski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/aranski.jpg" target="_blank"><img src="prva/aranski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Osmanski turski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Ottoman_Turkish_language" target="_blank">Ottoman Turkish language</a></td>
         <td class="rtl">كوچوك پره نس</td>
