--- a/index.html
+++ b/index.html
@@ -177,16 +177,16 @@
         <td>Bugarski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Bulgarian_language" target="_blank">Bulgarian language</a></td>
         <td>Малкия принц</td>
-        <td class="image"><a href="naslovna/bugarski-1.jpg" target="_blank"><img src="naslovna/bugarski-1.jpg" width="50px"></a></td>
-        <td class="image"><a href="prva/bugarski-1.jpg" target="_blank"><img src="prva/bugarski-1.jpg" width="50px"></a></td>
+        <td class="image"><a href="naslovna/bugarski.jpg" target="_blank"><img src="naslovna/bugarski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/bugarski.jpg" target="_blank"><img src="prva/bugarski.jpg" width="50px"></a></td>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Bugarski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Bulgarian_language" target="_blank">Bulgarian language</a></td>
         <td>Малкия принц</td>
-        <td class="image"><a href="naslovna/bugarski-2.jpg" target="_blank"><img src="naslovna/bugarski-2.jpg" width="50px"></a></td>
-        <td class="image"><a href="prva/bugarski-2.jpg" target="_blank"><img src="prva/bugarski-2.jpg" width="50px"></a></td>
+        <td class="image"><a href="naslovna/bugarski 2.jpg" target="_blank"><img src="naslovna/bugarski 2.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/bugarski 2.jpg" target="_blank"><img src="prva/bugarski 2.jpg" width="50px"></a></td>
       </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
