--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
         <td>Srpski latinica</td>
         <td><a href="https://en.wikipedia.org/wiki/Augmented_reality" target="_blank">Augmented reality</a></td>
         <td>Mali princ AR</td>
-        <td class="image"><a href="naslovna/prosirena realnost.jpg" target="_blank"><img src="naslovna/prosirena realnost.jpg" width="50px"></a></td>
-        <td class="image"><a href="prva/prosirena realnost.jpg" target="_blank"><img src="prva/prosirena realnost.jpg" width="50px"></a></td>
+        <td class="image"><a href="naslovna/prosirenarealnost.jpg" target="_blank"><img src="naslovna/prosirenarealnost.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/prosirenarealnost.jpg" target="_blank"><img src="prva/prosirenarealnost.jpg" width="50px"></a></td>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
