--- a/index.html
+++ b/index.html
@@ -902,6 +902,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Turski, Denizli dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Turkish_dialects" target="_blank">Turkish, Denizli dialects</a></td>
+        <td>Ġüc'cüg Pirens</td>
+        <td class="image"><a href="naslovna/turski-denizli_dijalekt.jpg" target="_blank"><img src="naslovna/turski-denizli_dijalekt.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/turski-denizli_dijalekt.jpg" target="_blank"><img src="prva/turski-denizli_dijalekt.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Uzbečki jezik ćirilica</td>
         <td><a href="https://en.wikipedia.org/wiki/Uzbek_language" target="_blank">Uzbek language</a></td>
         <td>Кичкина Шаҳзода</td>
