--- a/index.html
+++ b/index.html
@@ -108,6 +108,14 @@
         <td class="image"><a href="naslovna/srpski-cirilica_prosveta.jpg" target="_blank"><img src="naslovna/srpski-cirilica_prosveta.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/srpski-cirilica_prosveta.jpg" target="_blank"><img src="prva/srpski-cirilica_prosveta.jpg" width="50px"></a></td>
       </tr>
+        <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Srpski ćirilica</td>
+        <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian cyrilic</a></td>
+        <td>Мали принц</td>
+        <td class="image"><a href="naslovna/srpski-cirilica_makarije.jpg" target="_blank"><img src="naslovna/srpski-cirilica_makarije.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/srpski-cirilica_makarije.jpg" target="_blank"><img src="prva/srpski-cirilica_makarije.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Srpski latinica</td>
