--- a/index.html
+++ b/index.html
@@ -86,6 +86,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Srpski latinica</td>
+        <td><a href="https://en.wikipedia.org/wiki/Serbian_language" target="_blank">Serbian Latin</a></td>
+        <td>Mali princ</td>
+        <td class="image"><a href="naslovna/srpski-latinica_novus.jpg" target="_blank"><img src="naslovna/srpski-latinica_novus.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/srpski-latinica_novus.jpg" target="_blank"><img src="prva/srpski-latinica_novus.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Srpski ćirilica</td>
         <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian cyrilic</a></td>
         <td>Мали принц</td>
