Added new design

--- a/novo/hvala.html
+++ b/novo/hvala.html
@@ -18,11 +18,7 @@
     /* ]]> */</script>
   </head>
   <body onload="main()">
-    <h1>Mali Princ - Marinine knjige</h1>
-    Bla bla bla
-    <p/>
-    <a href="spisak.html">Spisak knjiga</a>
-    <br/>
-    <a href="hvala.html">Zahvalnice</a>
+    <h1>Mali Princ - Marinine knjige HVALA</h1>
+    Hvalaaaaaaaaaaaaa puno 
   </body>
 </html>
