--- a/novo/hvala.html
+++ b/novo/hvala.html
@@ -9,7 +9,7 @@
     <script type="text/javascript">/* <![CDATA[ */
     /* ]]> */</script>
   </head>
-  <body onload="main()">
+  <body>
     <h1>Mali Princ - Marinine knjige HVALA</h1>
     Hvalaaaaaaaaaaaaa puno 
   </body>
