--- a/novo/index.html
+++ b/novo/index.html
@@ -9,7 +9,7 @@
     <script type="text/javascript">/* <![CDATA[ */
     /* ]]> */</script>
   </head>
-  <body onload="main()">
+  <body>
     <h1>Mali Princ - Marinine knjige</h1>
     Bla bla bla
     <p/>
