--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         <td class="number"><span class="auto"></span></td>
         <td>Alhamijado jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Aljamiado" target="_blank">Aljamiado language</a></td>
-        <td class="rtl"></td>
+        <td class="rtl">اًل بّرىثِبِّتۡ</td>
         <td class="image"><a href="naslovna/alhamijado.jpg" target="_blank"><img src="naslovna_th/alhamijado.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/alhamijado.jpg" target="_blank"><img src="prva_th/alhamijado.jpg" width="50px"></a></td>
       </tr>
