--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
         <td class="number"><span class="auto"></span></td>
         <td>Dari jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Dari_language" target="_blank">Dari language</a></td>
-        <td class="rtl">پرنس کوچک</td>
+        <td class="rtl">شهزاده گـک</td>
         <td class="image"><a href="naslovna/dari.jpg" target="_blank"><img src="naslovna_th/dari.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/dari.jpg" target="_blank"><img src="prva_th/dari.jpg" width="50px"></a></td>
       </tr>
