--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -184,7 +184,7 @@
         <td class="number"><span class="auto"></span></td>
         <td>Arapski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Arabic" target="_blank">Arabic language</a></td>
-        <td class="rtl">شازده کوچولو</td>
+        <td class="rtl">الامير الصغير</td>
         <td class="image"><a href="naslovna/arapski.jpg" target="_blank"><img src="naslovna_th/arapski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/arapski.jpg" target="_blank"><img src="prva_th/arapski.jpg" width="50px"></a></td>
       </tr>
