--- a/index.html
+++ b/index.html
@@ -926,6 +926,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Tamašek (Tuareški) jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Tamasheq_language" target="_blank">Tamasheq (Tuareg) languages</a></td>
+        <td>ⴴⵟⵀⵍ</td>
+        <td class="image"><a href="naslovna/tuareg.jpg" target="_blank"><img src="naslovna_th/tuareg.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/tuareg.jpg" target="_blank"><img src="prva_th/tuareg.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Tatarski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Tatar_language" target="_blank">Tatar language</a></td>
         <td>Нәни принц</td>
@@ -963,14 +971,6 @@
         <td>Xa’ púxku’ a’ktsú qa’wa’sa</td>
         <td class="image"><a href="naslovna/totonacki.jpg" target="_blank"><img src="naslovna_th/totonacki.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/totonacki.jpg" target="_blank"><img src="prva_th/totonacki.jpg" width="50px"></a></td>
-      </tr>
-      <tr>
-        <td class="number"><span class="auto"></span></td>
-        <td>Tuareški jezik</td>
-        <td><a href="https://en.wikipedia.org/wiki/Tuareg_languages" target="_blank">Tuareg languages</a></td>
-        <td>ⴴⵟⵀⵍ</td>
-        <td class="image"><a href="naslovna/tuareg.jpg" target="_blank"><img src="naslovna_th/tuareg.jpg" width="50px"></a></td>
-        <td class="image"><a href="prva/tuareg.jpg" target="_blank"><img src="prva_th/tuareg.jpg" width="50px"></a></td>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
