--- a/index.html
+++ b/index.html
@@ -1022,8 +1022,8 @@
       </tr>
           <tr>
         <td class="number"><span class="auto"></span></td>
-        <td>Verona dijalekt</td>
-        <td><a href="https://en.wikipedia.org/wiki/Veneto#Language" target="_blank">Veronese Dialect</a></td>
+        <td>Venecijanski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Venetian_language" target="_blank">Lower Venetianlanguage</a></td>
         <td>El Principe Butin</td>
         <td class="image"><a href="naslovna/verona.jpg" target="_blank"><img src="naslovna_th/verona.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/verona.jpg" target="_blank"><img src="prva_th/verona.jpg" width="50px"></a></td>
