--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -980,10 +980,10 @@
         <td class="image"><a href="naslovna/uzbecki-latinica.jpg" target="_blank"><img src="naslovna_th/uzbecki-latinica.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/uzbecki-latinica.jpg" target="_blank"><img src="prva_th/uzbecki-latinica.jpg" width="50px"></a></td>
       </tr>
-          <tr>
+      <tr>
         <td class="number"><span class="auto"></span></td>
-        <td>Verona dijalekt</td>
-        <td><a href="https://en.wikipedia.org/wiki/Veneto#Language" target="_blank">Veronese Dialect</a></td>
+        <td>Venecijanski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Venetian_language" target="_blank">Venetian Lower Veronese language</a></td>
         <td>El Principe Butin</td>
         <td class="image"><a href="naslovna/verona.jpg" target="_blank"><img src="naslovna_th/verona.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/verona.jpg" target="_blank"><img src="prva_th/verona.jpg" width="50px"></a></td>
