--- a/index.html
+++ b/index.html
@@ -102,6 +102,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Srpski ćirilica 3D</td>
+        <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian Cyrillic 3D</a></td>
+        <td>Мали принц</td>
+        <td class="image"><a href="naslovna/maliprinc3d.jpg" target="_blank"><img src="naslovna_th/maliprinc3d.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/maliprinc3d.jpg" target="_blank"><img src="prva_th/maliprinc3d.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Srpski ćirilica</td>
         <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian cyrilic</a></td>
         <td>Мали принц</td>
