--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
         <td class="image"><a href="naslovna/srpski-cirilica_riznica.jpg" target="_blank"><img src="naslovna_th/srpski-cirilica_riznica.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/srpski-cirilica_riznica.jpg" target="_blank"><img src="prva_th/srpski-cirilica_riznica.jpg" width="50px"></a></td>
       </tr>
+      <tr>
        <td class="number"><span class="auto"></span></td>
         <td>Srpski ćirilica 3D</td>
         <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian Cyrillic</a></td>
@@ -758,7 +759,7 @@
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Persijski Farsi jezik</td>
-        <td><a href="https://en.wikipedia.org/wiki/Persian_language"" target="_blank">Persian language</a></td>
+        <td><a href="https://en.wikipedia.org/wiki/Persian_language" target="_blank">Persian language</a></td>
         <td class="rtl">شازده کوچولو</td>
         <td class="image"><a href="naslovna/farsi.jpg" target="_blank"><img src="naslovna_th/farsi.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/farsi.jpg" target="_blank"><img src="prva_th/farsi.jpg" width="50px"></a></td>
